index.scss
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");

*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: black;
  font-family: "Inter", sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
  color: white !important;
  font-size: 16px;
  overflow-x: hidden;
}

nav {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  height: 55px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 1px solid;
  background-color: #121212;
  border-image: linear-gradient(to right, #ffffff, rgba(255, 255, 255, 0.2)) 1;

  a {
    position: relative;
    text-decoration: none;
    color: #888;
    padding: 10px 25px;
    z-index: 1;
    font-size: 18px;
    transition: all 0.4s ease;
    display: flex;
    justify-content: center;
    align-items: center;

    &:hover {
      color: white;
    }

    &.selected {
      color: white;
      font-weight: 500;

      &::after {
        content: "";
        width: 80%;
        height: 2px;
        background: white;
        position: absolute;
        bottom: -6px;
      }
    }
  }

  #box {
    top: 0;
    left: 0;
    position: absolute;
    background-color: black;
    opacity: 0;
    transition: all 0.3s ease;
    pointer-events: none;
    border-radius: 5px;
  }
}

h1 {
  color: white;
  font-size: 160px;
  text-transform: uppercase;
  background: linear-gradient(180deg, #deeaff, rgb(224, 236, 255, 0.3));
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  display: inline-block;
}

